--- a/src/main/resources/fxml/admin_rents.fxml
+++ b/src/main/resources/fxml/admin_rents.fxml
@@ -61,7 +61,7 @@
     <left>
         <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="button_add" mnemonicParsing="false" prefWidth="205.0" text="New Rent" textFill="#f9f9fb">
+                <Button fx:id="button_add" mnemonicParsing="false" onAction="#openAddForm" prefWidth="205.0" text="New Rent" textFill="#f9f9fb">
                     <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </VBox.margin>
@@ -77,7 +77,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </Button>
-                <Button fx:id="button_edit" mnemonicParsing="false" prefWidth="205.0" text="Edit Rent" textFill="#f9f9fb">
+                <Button fx:id="button_edit" mnemonicParsing="false" onAction="#openEditForm" prefWidth="205.0" text="Edit Rent" textFill="#f9f9fb">
                     <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </VBox.margin>
