--- a/src/main/resources/fxml/admin_rents.fxml
+++ b/src/main/resources/fxml/admin_rents.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #242424;" stylesheets="@../css/admin.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.controller.adminRentsController">
+<BorderPane prefHeight="400.0" style="-fx-background-color: #242424;" stylesheets="@../css/admin.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.controller.adminRentsController">
     <top>
         <MenuBar stylesheets="@../css/MenuBar.css" BorderPane.alignment="CENTER">
             <menus>
@@ -50,6 +50,8 @@
                         <TableColumn fx:id="tc_model" editable="false" minWidth="100.0" prefWidth="-1.0" text="Model" />
                         <TableColumn fx:id="tc_license" editable="false" minWidth="60.0" prefWidth="-1.0" text="License" />
                         <TableColumn fx:id="tc_lastName" editable="false" minWidth="75.0" prefWidth="-1.0" text="Last Name" />
+                        <TableColumn fx:id="tc_start" minWidth="75.0" prefWidth="-1.0" text="Start Date" />
+                        <TableColumn fx:id="tc_end" minWidth="75.0" prefWidth="-1.0" text="End Date" />
                     </columns>
                 </TableView>
             </children>
@@ -61,7 +63,7 @@
     <left>
         <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="button_add" mnemonicParsing="false" onAction="#openAddForm" prefWidth="205.0" text="New Rent" textFill="#f9f9fb">
+                <Button fx:id="button_add" mnemonicParsing="false" onAction="#openAddForm" prefWidth="221.0" text="New Rent" textFill="#f9f9fb">
                     <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </VBox.margin>
@@ -69,7 +71,7 @@
                         <Font name="Segoe UI Semilight" size="17.0" />
                     </font>
                 </Button>
-            <Button fx:id="button_current" mnemonicParsing="false" onAction="#openCurrent" prefWidth="205.0" text="Current Rents" textFill="#f9f9fb">
+            <Button fx:id="button_current" mnemonicParsing="false" onAction="#openCurrent" text="Current Rents/Return a Car" textFill="#f9f9fb">
                <font>
                   <Font name="Segoe UI Semilight" size="17.0" />
                </font>
@@ -77,14 +79,6 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </Button>
-                <Button fx:id="button_edit" mnemonicParsing="false" onAction="#openEditForm" prefWidth="205.0" text="Edit Rent" textFill="#f9f9fb">
-                    <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </VBox.margin>
-                    <font>
-                        <Font name="Segoe UI Semilight" size="17.0" />
-                    </font>
-                </Button>
             <Text fill="#f9f9fb" strokeType="OUTSIDE" strokeWidth="0.0" text="Double click on rent to delete!">
                <font>
                   <Font name="Segoe UI Semilight" size="16.0" />
